basic design done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <section id="game">
+        <div class="game-box">
+            <div class="player-1">
+                <input type="text">
+                <button>Go</button>
+            </div>
+
+            <div class="player-2">
+                <input type="text">
+                <button>Go</button>
+            </div>
+        </div>
+
+    </section>
     
 
     <script src="js/script.js"></script>
