Player 1 part done

--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <h2 class="player-no">Player-1</h2>
+    <p class="err"></p>
     <section id="game">
         <div class="game-box">
             <div class="player-1">
-                <input type="text">
-                <button>Go</button>
+                <input class="player_1_input" type="text">
+                <button onclick="handelSubmit()" class="player_1_btn">Go</button>
             </div>
 
             <div class="player-2">
-                <input type="text">
-                <button>Go</button>
+                <input class="player_2_input" type="text">
+                <button class="player_2_btn">Go</button>
             </div>
         </div>
 
