--- a/index.html
+++ b/index.html
@@ -10,20 +10,32 @@
 
     <h2 class="player-no">Player-1</h2>
     <p class="err"></p>
+
     <section id="game">
+        
         <div class="game-box">
             <div class="player-1">
                 <input class="player_1_input" type="text">
-                <button onclick="handelSubmit()" class="player_1_btn">Go</button>
+                <button onclick="handelPlayerOne()" class="player_1_btn">Go</button>
             </div>
 
             <div class="player-2">
                 <input class="player_2_input" type="text">
-                <button class="player_2_btn">Go</button>
+                <button onclick="handelPlayerTwo()" class="player_2_btn">Go</button>
+            </div>
+
+            <div class="player-3">
+                <input class="player_3_input" type="text">
+                <button onclick="handelPlayerThree()" class="player_3_btn">Go</button>
             </div>
         </div>
 
     </section>
+
+    <div class="winner">
+        <h1 class="result"></h1>
+        <img src="https://t3.ftcdn.net/jpg/02/82/23/94/360_F_282239447_9JUkxLmUPzBvOrEAXVEx2GpNd1EkPOSO.jpg" alt="winner">
+    </div>
     
 
     <script src="js/script.js"></script>
